--- a/active/密室系列 - 开端.md
+++ b/active/密室系列 - 开端.md
@@ -5,7 +5,7 @@
 
 活动时间：2021.5.2  10:00-22:00
 
-~~~活动内容~~~文案：
+~~活动内容~~文案：
 
 
 > “何为真相
@@ -127,7 +127,7 @@ Good Luck
 
 
 
-###　《贰》＜一时多少豪杰＞
+### 《贰》＜一时多少豪杰＞
 
 在门开的瞬间，你立刻拉住门，侦探的意识和知觉对你已经成为直觉，反映到了你的一举一动
 
